fixed bug which lead to components being rendered for too long

--- a/pokemon/src/styles/listDetail.css
+++ b/pokemon/src/styles/listDetail.css
@@ -5,3 +5,8 @@
     animation:fade-in 0.5s linear;
   }
   
+  #sizer{
+    background-repeat:no-repeat!important;
+    background-size:contain!important;
+    background-position:center!important;
+}
